@@ -1,3 +1,8 @@
+Sun Mar  1 17:49:42 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* gnome.m4 (GNOME_INIT): Changed spacing so --help output looks
+	right.
+
 Fri Feb 27 10:05:34 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* gnome-objc-checks.m4 (GNOME_CHECK_OBJC): Set OBJECTIVE_C shell
